[gd_scene load_steps=16 format=3 uid="uid://c5yhgepm502at"]

[ext_resource type="Script" path="res://Player/PlayerController/PlayerController.gd" id="1_m4o8f"]

[sub_resource type="Animation" id="Animation_yx1y0"]
resource_name = "Jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0872665, -0.00349066, -0.0226893), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_h3rsj"]
resource_name = "Landing"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -0.5, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.0872665, 0.00349066, -0.0226893), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_6tkcj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_s1kyo"]
resource_name = "Slide"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0523599, 0, -0.0174533), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y8maw"]
_data = {
"Jump": SubResource("Animation_yx1y0"),
"Landing": SubResource("Animation_h3rsj"),
"RESET": SubResource("Animation_6tkcj"),
"Slide": SubResource("Animation_s1kyo")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_noap2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mc838"]
height = 1.275

[sub_resource type="CapsuleMesh" id="CapsuleMesh_4jvta"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_jfix0"]
properties/0/path = NodePath(".:rotation")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("neck/Head/Eyes/PlayerCamera:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="Animation" id="Animation_vphm0"]
resource_name = "Pistol_Idle"
length = 3.0
loop_mode = 1

[sub_resource type="Animation" id="Animation_lpvao"]
resource_name = "Pistol_Move"
loop_mode = 1
step = 0.25

[sub_resource type="Animation" id="Animation_331yf"]
resource_name = "Pistol_Shoot"
length = 0.5

[sub_resource type="Animation" id="Animation_a7egh"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_167xk"]
_data = {
"Pistol_Idle": SubResource("Animation_vphm0"),
"Pistol_Move": SubResource("Animation_lpvao"),
"Pistol_Shoot": SubResource("Animation_331yf"),
"RESET": SubResource("Animation_a7egh")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_m4o8f")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.222, 0)

[node name="PlayerCamera" type="Camera3D" parent="Head"]
cull_mask = 1048573
fov = 100.0

[node name="Player_Detection_Ray" type="RayCast3D" parent="Head/PlayerCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00110912, 2.38419e-07, -0.544739)
target_position = Vector3(0, 0, -50)
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head/PlayerCamera"]
libraries = {
"": SubResource("AnimationLibrary_y8maw")
}

[node name="StandingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.721, 0)
shape = SubResource("CapsuleShape3D_noap2")

[node name="CrouchingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.345, 0)
shape = SubResource("CapsuleShape3D_mc838")

[node name="WorldView" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.721, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldView"]
mesh = SubResource("CapsuleMesh_4jvta")
skeleton = NodePath("../..")

[node name="Checks" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)

[node name="Left" type="RayCast3D" parent="Checks"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)

[node name="Front" type="RayCast3D" parent="Checks"]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 0, 0)

[node name="Back" type="RayCast3D" parent="Checks"]
transform = Transform3D(1.91069e-15, -4.37114e-08, 1, -1, -4.37114e-08, 0, 4.37114e-08, -1, -4.37114e-08, 0, 0, 0)

[node name="Right" type="RayCast3D" parent="Checks"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)

[node name="RayCastCeiling" type="RayCast3D" parent="Checks"]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0.492438, 0)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_jfix0")

[node name="GunAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_167xk")
}
playback_default_blend_time = 0.05

[connection signal="animation_finished" from="GunAnimations" to="." method="_on_gun_animations_animation_finished"]
